コンボボックス完成

--- a/WPF/ConverterApp/MainWindow.xaml
+++ b/WPF/ConverterApp/MainWindow.xaml
@@ -13,7 +13,7 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Name="ImperialUnitToMetric" Margin="4" Width="40" Content="▲"/>
-            <Button Name="MetricToImperialUnit" Margin="4" Width="40" Content="▼"/>
+            <Button Name="MetricToImperialUnit" Margin="4" Width="40" Content="▼" Click="MetricToImperialUnit_Click"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <TextBox Name="ImperialValue" Margin="4" Width="100"/>
