--- a/WPF/PrismObservesSample/MainWindow.xaml
+++ b/WPF/PrismObservesSample/MainWindow.xaml
@@ -23,13 +23,13 @@
         </Grid.RowDefinitions>
         <!-- 入力１ -->
         <TextBox Grid.Row="0" Grid.Column="0" Height="30" Margin="5" FontSize="20" 
-                 Text="{Binding Input1}"/>
+                 Text="{Binding Input1 ,UpdateSourceTrigger=PropertyChanged}"/>
         <!-- +記号 -->
         <TextBlock Grid.Row="0" Grid.Column="1" Height="30" Margin="5" 
                    Text="+" TextAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
         <!-- 入力２ -->
         <TextBox Grid.Row="0" Grid.Column="2" Height="30" Margin="5" FontSize="20" 
-                 Text="{Binding Input2}"/>
+                 Text="{Binding Input2 ,UpdateSourceTrigger=PropertyChanged}"/>
         <!-- =記号 -->
         <TextBlock Grid.Row="0" Grid.Column="3" Height="30" Margin="5" 
                    Text="=" TextAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
@@ -38,7 +38,7 @@
                    Text="{Binding Result}"/>
         <!-- 計算ボタン -->
         <Button Grid.Row="1" Grid.Column="4" Content="計算" Margin="4" 
-                Command="{Binding SumCommand}" CommandParameter="{Binding Result}"/>
+                Command="{Binding SumCommand}"/>
 
     </Grid>
 </Window>
