--- a/WPF/TenkiApp/MainWindow.xaml
+++ b/WPF/TenkiApp/MainWindow.xaml
@@ -1,12 +1,144 @@
 ﻿<Window x:Class="TenkiApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TenkiApp"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="天気アプリ" Height="500" Width="550" Background="AliceBlue">
 
-    </Grid>
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontFamily" 
+                Value="pack://application:,,,/Fonts/#たぬき油性マジック"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="FontFamily" 
+                Value="pack://application:,,,/Fonts/#たぬき油性マジック"/>
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="FontFamily" 
+                Value="pack://application:,,,/Fonts/#たぬき油性マジック"/>
+        </Style>
+    </Window.Resources>
+    <!-- ここで全体を Viewbox で包む -->
+    <Viewbox Stretch="Uniform" StretchDirection="Both">
+        <!-- 基準サイズ（デザイン時のサイズ） -->
+        <Grid Width="550" Height="500" Margin="10">
+            <!-- 列を追加して左右分割 -->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- 行構成 -->
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <!-- タイトル・検索 -->
+            <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" LastChildFill="False" Margin="0,0,0,10">
+                <StackPanel DockPanel.Dock="Left" Orientation="Vertical" Margin="0,0,10,0">
+                    <TextBlock Text="WeatherApp" FontSize="22" FontWeight="Bold" />
+                    <TextBlock x:Name="DateText" FontSize="12"/>
+                </StackPanel>
+
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" HorizontalAlignment="Left" Margin="10,0,0,0">
+                    <ComboBox x:Name="PrefectureComboBox" Width="120" Height="24" FontSize="11"
+                              Margin="0,0,5,0" IsEditable="True" Text="都道府県を選択"
+                              SelectionChanged="PrefectureComboBox_SelectionChanged"/>
+                    <ComboBox x:Name="CityComboBox" Width="120" Height="24" FontSize="11"
+                              Margin="0,0,5,0" IsEditable="True" Text="市区町村を選択"/>
+                    <Button Content="検索" Width="60" Height="24" FontSize="11" Click="SearchButton_Click"/>
+                </StackPanel>
+            </DockPanel>
+
+            <!-- 左側の天気情報 -->
+            <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Margin="10,10,0,0" Width="230">
+                <Border BorderThickness="0,0,0,1" BorderBrush="Gray" Margin="0,0,0,5">
+                    <TextBlock x:Name="SelectedRegionText"
+                               Text=""
+                               FontSize="30"
+                               FontWeight="Bold"
+                               TextAlignment="Center"
+                               MinWidth="200"/>
+                </Border>
+
+                <TextBlock x:Name="CurrentTempText" Text="--℃" FontSize="28" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,10"/>
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,10">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,20,0">
+                        <TextBlock Text="最高" FontSize="14" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <TextBlock x:Name="MaxTempText" Text="{Binding MaxTemp}" FontSize="14" Foreground="Red" TextAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="最低" FontSize="14" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <TextBlock x:Name="MinTempText" Text="{Binding MinTemp}" FontSize="14" Foreground="Blue" TextAlignment="Center"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <TextBlock x:Name="WeatherConditionText" Text="" FontSize="16" FontStyle="Italic" TextAlignment="Center" Margin="0,0,0,5"/>
+                <TextBlock x:Name="WindSpeedText" Text="風速: -- m/s" FontSize="14" TextAlignment="Center" Margin="0,0,0,2"/>
+                <TextBlock x:Name="HumidityText" Text="湿度: --%" FontSize="14" TextAlignment="Center" Margin="0,0,0,2"/>
+            </StackPanel>
+
+            <!-- 右側のスペース（天気アイコン＋おすすめ情報） -->
+            <StackPanel Grid.Row="1" Grid.Column="1" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top">
+                <Border CornerRadius="20"
+            BorderBrush="Gray"
+            BorderThickness="2"
+            Background="White"
+            Width="200"
+            Height="150"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Margin="0,0,0,10">
+                    <Image x:Name="WeatherIcon"
+               Stretch="Uniform"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"/>
+                </Border>
+
+                <TextBlock x:Name="LaundryAdviceText"
+           FontSize="16"
+           Margin="10,0"
+           TextWrapping="Wrap"/>
+            </StackPanel>
+
+            <!-- 一週間の天気表示（横スクロール可能） -->
+            <ScrollViewer Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                          HorizontalScrollBarVisibility="Auto"
+                          VerticalScrollBarVisibility="Disabled"
+                          Margin="0,10,0,0">
+                <ItemsControl x:Name="WeeklyWeatherPanel">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="10"
+                                    Padding="10" Margin="10" Background="#F9F9F9">
+                                <StackPanel Width="100" HorizontalAlignment="Center">
+                                    <TextBlock Text="{Binding Date}" FontSize="16" FontWeight="Bold" TextAlignment="Center"/>
+                                    <Image Source="{Binding Icon}" Width="80" Height="80" Margin="0,5"/>
+                                    <TextBlock Text="{Binding Temp}" FontSize="14" TextAlignment="Center"/>
+                                    <TextBlock Text="{Binding Condition}" FontSize="14" TextAlignment="Center"/>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+
+            <!-- 詳細情報（WeatherInfoText を残す） -->
+            <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,10,0,0" HorizontalAlignment="Left">
+                <TextBlock x:Name="WeatherInfoText"
+                           FontSize="14"
+                           TextAlignment="Left"
+                           TextWrapping="Wrap"/>
+            </StackPanel>
+        </Grid>
+    </Viewbox>
 </Window>
